test/libsolidity/syntaxTests/parsing/declaring_fixed_literal_variables.sol
contract A {
    fixed40x40 pi = 3.14;
}
// ----
// TypeError 7407: (33-37): Type rational_const 157 / 50 is not implicitly convertible to expected type fixed40x40. Number is too large for type.
